Release hardening for Tensa 3.0.0